wip fix host node screen alignment of segments

--- a/src/examples/bw_enforcer/public/app.css
+++ b/src/examples/bw_enforcer/public/app.css
@@ -71,7 +71,6 @@ body {
   margin: 0;
   padding: 0;
   position: absolute;
-  width: 30px;
   left: 30px;
   bottom: 0;
   font-size: 14px;
